# peripheral.joystick

./: .travis.yml  CMakeLists.txt  Jenkinsfile  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: sync-addon-metadata-translations.yml
debian/: copyright
depends/linux/libudev/: 0001-Don-t-build-manpages.patch  CMakeLists.txt  libudev.sha256  libudev.txt
peripheral.joystick/: addon.xml.in
src/: addon.cpp  addon.h
src/api/: IJoystickInterface.cpp  IJoystickInterface.h  Joystick.cpp  Joystick.h  JoystickInterfaceCallback.cpp  JoystickInterfaceCallback.h  JoystickManager.cpp  JoystickManager.h  JoystickTranslator.cpp  JoystickTranslator.h  JoystickTypes.h  JoystickUtils.cpp  JoystickUtils.h  PeripheralScanner.cpp  PeripheralScanner.h
src/buttonmapper/: ButtonMapTranslator.cpp  ButtonMapTranslator.h  ButtonMapTypes.h  ButtonMapUtils.cpp  ButtonMapUtils.h  ButtonMapper.cpp  ButtonMapper.h  ControllerTransformer.cpp  ControllerTransformer.h  DriverGeometry.cpp  DriverGeometry.h  JoystickFamily.cpp  JoystickFamily.h  StringRegistry.cpp  StringRegistry.h
src/filesystem/: DirectoryCache.cpp  DirectoryCache.h  DirectoryUtils.cpp  DirectoryUtils.h  FileUtils.cpp  FileUtils.h  Filesystem.cpp  Filesystem.h  FilesystemTypes.h  IDirectoryUtils.h  IFile.h  IFileUtils.h
src/log/: ILog.h  Log.cpp  Log.h  LogAddon.cpp  LogAddon.h  LogConsole.cpp  LogConsole.h  LogSyslog.cpp  LogSyslog.h
src/settings/: Settings.cpp  Settings.h
src/storage/: ButtonMap.cpp  ButtonMap.h  Device.cpp  Device.h  DeviceConfiguration.cpp  DeviceConfiguration.h  IDatabase.h  (+11 more)
(+183 files in other folders)
